Fix spacing

--- a/src/styles/layout/SideBar.scss
+++ b/src/styles/layout/SideBar.scss
@@ -7,11 +7,12 @@
   height: 100vh;
   max-width: 40rem;
   padding-bottom: 7rem;
+  @include flex(column, flex-start);
   .question-card {
+    text-align: start;
     @include flex(column, space-around);
     margin-inline-start: 1rem;
     border-bottom: 1px solid pink;
-    text-align: center;
     padding-block: 1rem;
     padding-inline: 0.5rem 2rem;
     transition: 350ms;
